# autogen-kafka

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  service.yml
python/: .gitignore  PACKAGING.md  README.md  docker-compose.yml  pyproject.toml
